# dgit

./: .gitignore  CMakeLists.txt  FEATURES.md  Makefile  README.md  build.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/commands/: cli.cpp  commands.cpp
src/core/: config.cpp  index.cpp  repository.cpp  sha1.cpp
src/merge/: merge.cpp
src/network/: network.cpp
src/objects/: object.cpp  object_database.cpp
src/packfile/: packfile.cpp
src/refs/: refs.cpp
tests/: CMakeLists.txt  test_main.cpp  test_objects.cpp  test_sha1.cpp
